[project]
name = "lembayung"
version = "0.1.0"
description = "An advanced asynchronous engine for multi-cycle API polling and relational state-snapshotting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tenacity>=8.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-telegram-bot>=21.0"
]

[project.scripts]
lembayung = "lembayung.cli:main"
lembayung-bot = "lembayung.bot:run_bot"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.7"
]
